去除部分无效代码

--- a/android/src/main/module/AndroidManifest.xml
+++ b/android/src/main/module/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".view.activity.NavWebsiteActivity"/>
         <activity android:name=".view.activity.AndroidCollectActivity"/>
         <activity android:name=".view.activity.AndroidRegisterActivity"/>
-
+        <activity android:name=".view.activity.CollectNetActivity"/>
     </application>
 
 
