--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".view.activity.NavWebsiteActivity"/>
         <activity android:name=".view.activity.AndroidCollectActivity"/>
         <activity android:name=".view.activity.AndroidRegisterActivity"/>
+        <activity android:name=".view.activity.CollectNetActivity"/>
     </application>
 
 
