优化音乐模块代码

--- a/music/src/main/AndroidManifest.xml
+++ b/music/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <application>
 
+        <activity android:name=".ui.activity.GuideMusicActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".ui.activity.MusicActivity"
             android:launchMode="singleTask"/>
         <activity android:name=".ui.activity.MusicInfoActivity"/>
