--- a/music/src/main/module/AndroidManifest.xml
+++ b/music/src/main/module/AndroidManifest.xml
@@ -7,19 +7,22 @@
         android:name=".app.MusicApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/app_music_name"
         android:theme="@style/AppTheme"
         android:supportsRtl="true"
         tools:replace="android:label"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".ui.activity.MusicActivity"
+        <activity android:name=".ui.activity.GuideMusicActivity"
+            android:theme="@style/SplashTheme"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.MusicActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".ui.activity.MusicInfoActivity"/>
         <activity android:name=".ui.activity.OnlineMusicActivity"/>
         <activity android:name=".ui.activity.ArtistInfoActivity"/>
