--- a/news/build.gradle
+++ b/news/build.gradle
@@ -15,7 +15,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-
+        multiDexEnabled true
         if (rootProject.ext.isNewsApplication){
             //组件模式下设置applicationId
             applicationId "com.ycbjie.news"
