组件化项目改造

--- a/business/GameBusiness/src/main/AndroidManifest.xml
+++ b/business/GameBusiness/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         <activity android:name="com.ycbjie.book.activity.DoodleViewActivity"/>
         <activity android:name="com.ycbjie.book.activity.AirGameActivity"/>
         <activity android:name="com.ycbjie.book.activity.PinTuGameActivity"/>
+        <activity android:name="com.ycbjie.book.activity.MonkeyGameActivity"/>
     </application>
 
 
