--- a/business/DemoBusiness/build.gradle
+++ b/business/DemoBusiness/build.gradle
@@ -70,5 +70,6 @@ dependencies {
     implementation project(path: ':ToolLayer')
     implementation project(path: ':ImageServer')
     implementation project(path: ':LibraryLayer')
+    implementation project(path: ':CoverWidget')
     implementation project(path: ':CustomWidget')
 }
