--- a/Tool/ToolUtilsLib/src/main/AndroidManifest.xml
+++ b/Tool/ToolUtilsLib/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.toolutils">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application>
         <activity
             android:name=".permission.PermissionUtils$PermissionActivity"
