--- a/Business/DemoBusiness/src/main/module/AndroidManifest.xml
+++ b/Business/DemoBusiness/src/main/module/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
 
 
-        <activity android:name="com.ycbjie.other.ui.location.InnerTestActivity"/>
+        <activity android:name="com.ycbjie.other.ui.location.LocationTestActivity"/>
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="c633d7562d94d936f43e3153fdfb6060" />
