--- a/Widget/BannerWidget/build.gradle
+++ b/Widget/BannerWidget/build.gradle
@@ -18,9 +18,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     api(rootProject.ext.dependencies["appcompat-v7"])
+    api(rootProject.ext.dependencies["annotations"])
 }
