--- a/settings.gradle
+++ b/settings.gradle
@@ -48,7 +48,7 @@ project(':LargeImageLib').projectDir = new File('Widget/LargeImageLib')
 /* +++++++++ 框架基础工具库 +++++++++ */
 include ':ZxingServerLib', ':WebSocketLib',  ':SocketIoLib', ':SerialTaskLib' ,
         ':NetHelperLib', ':MapToolLib' ,':LocaleHelperLib' ,':CountTimerLib' ,':MapLocationLib',
-        ':AnimatorToolLib', ':AppTraceTool'
+        ':AnimatorToolLib', ':AppTraceTool', ':LongevityLib'
 project(':ZxingServerLib').projectDir = new File('Tool/ZxingServerLib')
 project(':WebSocketLib').projectDir = new File('Tool/WebSocketLib')
 project(':SocketIoLib').projectDir = new File('Tool/SocketIoLib')
@@ -60,3 +60,4 @@ project(':CountTimerLib').projectDir = new File('Tool/CountTimerLib')
 project(':MapLocationLib').projectDir = new File('Tool/MapLocationLib')
 project(':AnimatorToolLib').projectDir = new File('Tool/AnimatorToolLib')
 project(':AppTraceTool').projectDir = new File('Tool/AppTraceTool')
+project(':LongevityLib').projectDir = new File('Tool/LongevityLib')
