--- a/Widget/ZoomImageLib/build.gradle
+++ b/Widget/ZoomImageLib/build.gradle
@@ -1,14 +1,18 @@
 apply plugin: 'com.android.library'
+apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
+//迁移到jitpack
+apply plugin: 'com.github.dcendents.android-maven'
+
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion rootProject.ext.android["compileSdkVersion"]
+    buildToolsVersion rootProject.ext.android["buildToolsVersion"]
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 15
-        versionName "1.1.5"
+        minSdkVersion rootProject.ext.android["minSdkVersion"]
+        targetSdkVersion rootProject.ext.android["targetSdkVersion"]
+        versionCode rootProject.ext.android["versionCode"]
+        versionName rootProject.ext.android["versionName"]
     }
 
     buildTypes {
@@ -22,7 +26,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    api(rootProject.ext.dependencies["appcompat-v7"])
+    api(rootProject.ext.dependencies["annotations"])
 }
 
 
