--- a/Business/AnimBusiness/build.gradle
+++ b/Business/AnimBusiness/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api(rootProject.ext.dependencies["appcompat-v7"])
     api(rootProject.ext.dependencies["annotations"])
-    implementation project(path: ':AnimatorToolLib')
+//    implementation project(path: ':AnimatorToolLib')
+    implementation 'com.github.yangchong211.YCAppTool:AnimatorToolLib:1.3.7'
     implementation project(path: ':LibraryLayer')
 }
