--- a/app/build.gradle
+++ b/app/build.gradle
@@ -200,6 +200,7 @@ dependencies {
     }
     implementation project(path: ':AnimBusiness')
     implementation project(path: ':AppStatusLib')
+    implementation project(path: ':MonitorFileLib')
     annotationProcessor rootProject.ext.dependencies["router-compiler"]
     implementation project(path: ':HttpServer')
     implementation project(path: ':ConfigLayer')
