--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        applicationId "com.ns.yc.lifehelper"
+        applicationId "com.yc.lifehelper"
         //配置阿里ARouter路由
         javaCompileOptions {
             annotationProcessorOptions {
