完善磁盘file查看器文件分享能力和增加日期

--- a/Monitor/MonitorFileLib/src/main/AndroidManifest.xml
+++ b/Monitor/MonitorFileLib/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         <activity android:name="com.yc.monitorfilelib.FileExplorerActivity"/>
         <provider
             android:name="com.yc.monitorfilelib.FileExplorerProvider"
-            android:authorities="com.yc.monitorfilelib.fileExplorerProvider"
+            android:authorities="${applicationId}.fileExplorerProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
