--- a/Tool/LocaleHelperLib/src/main/AndroidManifest.xml
+++ b/Tool/LocaleHelperLib/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.localelib">
 
+    <application>
+
+    </application>
+
 </manifest>
