优化线程池封装库，抽取builder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -215,6 +215,8 @@ dependencies {
     implementation project(path: ':BannerViewLib')
     implementation project(path: ':BlurViewLib')
 
+    implementation project(path: ':ApplicationLib')
+
     implementation project(path: ':MonitorFileLib')
     implementation project(path: ':MonitorNetLib')
     implementation project(path: ':MonitorCrashLib')
